- fixed chats and contacts screen long name title wrap overflow

--- a/SPIXI/SPIXI.Android/Assets/html/css/spixiui.css
+++ b/SPIXI/SPIXI.Android/Assets/html/css/spixiui.css
@@ -1022,12 +1022,16 @@ img.emoji {
     font-size: 10pt;
     font-weight: bold;
     overflow: hidden;
+    white-space: nowrap;
+	text-overflow: ellipsis;
 }
 .spixi-list-item-title-center {
     color: #000000;
     font-size: 10pt;
     width: 100%;
     overflow: hidden;
+    white-space: nowrap;
+	text-overflow: ellipsis;
     position: relative;
     top: 50%;
     transform: translateY(-50%);
